# itmo-hws-architecture

./: .travis.yml  README.md
bookstore/: Books_store.drawio  README.md
cli/: README.md
cli/terminal/: CMakeLists.txt
cli/terminal/src/: main.cpp  terminal.cpp  test.cpp
cli/terminal/src/cli/commands/: command.hpp  echo_cmd.cpp  exit_cmd.cpp  exit_cmd.hpp  grep_cmd.cpp  pwd_cmd.cpp  wc_cmd.hpp
defects/: README.md
roguelike/: README.md
roguelike/design document/: Readme.md
roguelike/project/: game_starter.py  main.py  test.py
roguelike/project/engine/: bar.py  engine.py  engine_initializer.py  engine_load_types.py  keys_handler.py  menu.py  render.py  serialization.py
roguelike/project/logic/: decorator.py  entity.py  entity_stats.py  inventory.py  killer.py  logger.py  mob.py  move.py  player.py  random_mob.py  states.py  strategy.py
roguelike/project/logic/patterns/: command.py  decorator.py  strategy.py
roguelike/project/map/: cell.py  game_map.py  rectangle.py  room.py  wall.py
roguelike/project/media/: SD_MAP.json
roguelike/диздок/: DOC.md
terminal/: CMakeLists.txt
terminal/src/: commands.hpp  main.cpp  terminal.hpp  test.cpp
terminal/src/cli/: commands.cpp  commands.hpp
terminal/src/cli/commands/: cat_cmd.cpp  cat_cmd.hpp  command.cpp  echo_cmd.hpp  exit_cmd.hpp  grep_cmd.cpp  grep_cmd.hpp  pwd_cmd.hpp  wc_cmd.cpp  wc_cmd.hpp
terminal/src/commands/: cat_cmd.hpp  cd_cmd.hpp  command.hpp  echo_cmd.hpp  exit_cmd.hpp  grep_cmd.hpp  ls_cmd.hpp  pwd_cmd.hpp  wc_cmd.hpp
vcs/: README.md  VCS_classes.drawio  VCS_components.drawio
